--- a/data/pages.yml
+++ b/data/pages.yml
@@ -14,6 +14,8 @@
       url: "first-app"
     - title: "Core Concepts"
       url: "core-concepts"
+    - title: "Models"
+      url: "models"
 
 - title: "The Object Model"
   url: 'object-model'
