--- a/data/pages.yml
+++ b/data/pages.yml
@@ -10,10 +10,10 @@
   pages:
     - title: "Installing Ember"
       url: "index"
-    - title: "Your First Ember App"
-      url: "first-app"
     - title: "Core Concepts"
       url: "core-concepts"
+    - title: "Application Setup and Structure"
+      url: "application-setup-and-structure"
 
 - title: "The Object Model"
   url: 'object-model'
